--- a/Files/rrs/mi.bib
+++ b/Files/rrs/mi.bib
@@ -2538,6 +2538,17 @@ publisher={Springer}
   publisher={Wiley Online Library}
 }
 
+@article{alberti2015eco,
+  title={Eco-evolutionary dynamics in an urbanizing planet},
+  author={Alberti, Marina},
+  journal={Trends in Ecology \& Evolution},
+  volume={30},
+  number={2},
+  pages={114--126},
+  year={2015},
+  publisher={Elsevier}
+}
+
 @incollection{alberti2001quantifying,
   title={Quantifying the urban gradient: linking urban planning and ecology},
   author={Alberti, Marina and Botsford, Erik and Cohen, Alex},
